--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@ h1, h2, h3, h4, h5, h6 {
     
       <h4>Blueberry Pancakes</h4>
       <p class="w3-text-grey">With syrup, butter and lots of berries 8.50</p>    
+
+      <h4>Frittata</h4>
+      <p class="w3-text-grey">Egg, bacon, cheese and veggies 10.50</p>    
     </div>
     
     <div class="w3-col l6 w3-padding-large">
